[tool.poetry]
name = "diaml"
version = "0.1.0"
description = "DiaML specification, parser, and validator"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
